# cantrip

./: README.md  dimensions.sql  discovery.sql  init.sql  metrics_per_dimension.sql  pyproject.toml  sample.db
src/cantrip/: __init__.py  models.py  protocol.py
src/cantrip/implementations/: base.py  sqlite.py  toolbox.py
tests/implementations/: base_test.py
