[project]
name = "cantrip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "sqlalchemy>=2.0.41",
    "sqlglot>=26.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
